--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,5 +135,32 @@ body {
 	width: 22px
 }
 
+.tabsContainer {
+	margin-left: 150px;
+}
+
+.tabsContainer .tabList {
+	padding: 0;
+	margin: 0;
+}
+
+.tabsContainer .tabList li {
+	display: inline-block;
+	padding: 0 16px 12px 16px;
+	color: #777;
+	font-size: 13px;
+}
+
+.tabsContainer .tabList li a {
+	text-decoration: none;
+}
+
+
+
+
+
+
+
+
 
 
