--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,15 @@ body {
 	text-decoration: none;
 }
 
+.tabsContainer .tabList li.active {
+	border-bottom: 3px solid #1A73E8;
+}
+
+.tabsContainer .tabList li.active a {
+	font-weight: bold;
+	color: #1A73E8;
+}
+
 
 
 
